--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plants {
+  max-width: 200px;
+}
+
 
 /* do not edit this footer */
 .footer {
@@ -23,4 +36,4 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
-}
+} 
